      header \file{R_ext/Utils.h} are now documented in
      \sQuote{Writing R Extensions} and so formally part of the API.

      \item The non-API entry points \code{Rf_setSVector},
      \code{Rf_StringFalse}, \code{Rf_StringTrue} and
      \code{Rf_isBlankString} have been added to those reported by
      \command{R CMD check}.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{as.numeric()}, \code{scan()}, \code{type.convert()}
      and other places which use the internal C function \code{R_strtod} now
      require a \emph{non-empty} digit sequence in a decimal or binary
      exponent.  This aligns with the C/POSIX standard for \code{strtod} and
      with \code{?NumericConstants}.

      \item \code{as.data.frame(m, make.names=NA)} now works correctly for
      a matrix \code{m} with \code{NA}'s in row names.

      \item The error message from \code{<POSIXlt>[["hour"]]} and similar
      now mentions \code{*[[, "hour"]]}, as wished for in \PR{17409} and
      proposed by \I{Michael Chirico}.

      \item \code{qbinom()} and potentially \code{qpois()}, \code{qnbinom()},
      no longer sometimes fail accurate inversion (of \code{pbinom()},
      etc), thanks to Christopher Chang's report and patch in \PR{18711}.

      \item The internal help server on Windows can again serve requests
      sent in quick succession, fixing a regression in \R 4.4.0.

      \item \code{debugcall(\var{S3Generic}())} now also works when a
      corresponding S4-generic version is in the \pkg{methods} cache
      (\PR{18143}).

      \item Package \pkg{tools}' \code{toTitleCase(ch0)} now returns
      \code{character(0)} when \code{ch0} is of zero length; fixing
      \PR{18724}, reported by David Hugh Jones.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.4.0}{
  \subsection{SIGNIFICANT USER-VISIBLE CHANGES}{
    \itemize{
      \item Startup banners, \command{R --version}, \code{sessionInfo()}